--- a/sivu.html
+++ b/sivu.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <!--
+to do:
+1. testaus sille, että salasana sis. kaikki halutut valitut merkit
+2. tyhjennä nappula poistaa select-valikon valinnan
+    -->
 
 <head><style>
     div {
